# MyJNIofTRTC

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: ITRTCCloud.h
app/src/main/cpp/logutil/: LogUtil.h
app/src/main/cpp/sdkinterface/: TRTCCloudCore.cpp  TRTCCloudCore.h
app/src/main/java/com/chaoli/myjnioftrtc/: GenerateTestUserSig.java  MainActivity.java
app/src/main/java/com/chaoli/myjnioftrtc/nativeUtils/: JniCallBack.java  TRTCNativeManager.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
